2014-02-25  Benno Schulenberg  <bensberg@justemail.net>
	* NEWS - Fix some typos and wordings, and rewrap a few lines.
	* src/global.c - Correcting some translator comments, removal
	of a few superfluous blank lines, and some pedantic comment
	tweaks (mainly adding missing periods and stars).
	* src/global.c - Ordering "Prev Word" and "Next Word" better.
	* src/global.c - Make ^G not only call help but also exit from
	it, and make ^C also exit from help and from the file browser.
	Also remove two redundant shortcut definitions.

2014-02-25  Mike Frysinger  <vapier@gentoo.org>
	* src/Makefile.am - Rename 'INCLUDES' to 'AM_CPPFLAGS', since
	Automake changed the naming of these a while ago, and at least
	version 1.13 now starts warning about it.
	* .gitignore - Ignore generated files (and bak files).

2014-02-25  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (write_lockfile, do_lockfile) - Fix a typo reported
	by Jean-Philippe Guérard and inconsistent spelling of "lock file"
	reported by myself on nano-devel in March 2013.

2014-02-25  Benno Schulenberg  <bensberg@justemail.net>
	* src/help.c (do_help_void) - Call the help browser with the correct
	refresher for afterwards.  This solves a bug reported by myself on
	nano-devel in August 2010: after typing ^R ^T ^W ^G ^X, the file
	being edited would get displayed instead of the list of files.

2014-02-24 Chris Allegretta <chrisa@asty.org>
	* new linter functionality.  rcfile option "linter"
	* src/global.c (shortcut_init) - Actually free the sclist
	  if it was allocated before.
	* src/winio.c (do_credits) - Add Benno, my children,
	  update copyright info

2014-02-23  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/*.nanorc - Comment and punctuation tweaks.
	* doc/syntax/sh.nanorc - Colour $VAR within a "" string
	but not within a '' string, and do not colour strings
	within comments.  Fixes bug #29943.

2014-02-23  Benno Schulenberg  <bensberg@justemail.net>